The app's now using Realm instead of SQLite database - changes made in build.gradles are required to make Realm work Added data models, RealmCRUD class, register/login fragments, Modified layouts: settings, pwd_details There's an error in activity_main.xml: Error inflating class android.support.design.widget.NavigationView while trying to start the app using API version 22

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">Password Manager 2</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Password Manager</string>
-    <string name="nav_header_subtitle">adbigaj@us.edu.pl</string>
+    <string name="nav_header_title">Safe Offline Password Manager</string>
+    <string name="nav_header_subtitle">Created by XareeN</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
